# RoboticExplorationSpaceTeam

./: .gitignore  CONTACT  Obstacle Detection Through a Kinect.txt  README.md  depends  sftp-config.json  usage  usage.md
beacons/config/: beacons.config  biases.config
beacons/src/: .beacons.cpp.swp  .main.cpp.swp  Makefile  beacons  beacons.cpp  beacons.h  data  main.cpp
decawave_driver/: dwm1000driver
launch/: base.launch~  base.sh  odometry.launch  odometry.launch~  odometry.sh  odometry.sh~  rover.launch  rover.launch~  rover_setup.sh
microcontroller/encoderTeensy/: README.txt
microcontroller/encoderTeensy/Encoder8Pin/: Encoder8Pin.ino
microcontroller/encoderTeensy/Encoder_sketch8pin/: Encoder_sketch8pin.ino
microcontroller/encoderTeensy/encoderSketch8Pin/: Encoder_sketch8pin.ino
microcontroller/motorControl/: README.txt
microcontroller/motorControl/MotorDriver/: MotorDriver.ino  MotorDriver_old.ino
object_avoidance/: object_recog.py
pathfinder_draft/: coordinates.h  pathfinding.cpp  pathfinding_node.cpp
raspberrypi/romeo/: romeo.ino  romeooo.cpp
rover_brain_draft/: rover_brain.cpp  rover_brain.h
rover_move_base_draft/: rover_move_base.cpp  rover_move_base.h  rover_move_base_node.cpp
rover_odometry/: package.xml  package.xml~
rover_odometry/include/Beacon/: Beacon.h
rover_odometry/include/Odometry/: Odometry.h  Odometry.h~
rover_odometry/msg/: Odometry.msg
rover_odometry/src/: Odometry.cpp  rover_odometry.cpp
rusty_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rusty_description/src/: parser.cpp  parser.cpp~
rusty_description/urdf/: rest_rover.urdf  rest_rover.urdf~
src/base_launch/: CMakeLists.txt  package.xml
src/base_launch/launch/: base_launch.config  base_launch.launch
src/base_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/base_teleop/launch/: base_teleop.launch
src/base_teleop/src/: base_teleop.cpp  base_teleop.cpp~  base_teleop_ramp.cpp.txt  teleop_rest.cpp~
src/freenect_stack-master/freenect_camera/: CMakeLists.txt  CMakeLists.txt~
src/minirover_controls/: CMakeLists.txt
src/minirover_controls/msg/: Capacity.msg
src/minirover_controls/src/: drivetrain_control.h
src/move_base_example/: CMakeLists.txt  package.xml  package.xml~
src/move_base_example/src/: move_base_example.cpp  move_base_example.cpp~  move_base_example.h  move_base_example.h~  pid.cpp  pid.h
src/rover_brain/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_Old.txt  CMakeLists_new.txt  CMakeLists_new.txt~  package.xml
src/rover_brain/src/: CameraAccess.h  RoverBrain.cpp  RoverBrain.cpp~  RoverBrain.h~  rover_brain.cpp  rover_brain.cpp~  rover_brain_node.cpp~
src/rover_brain/srv/: auto_togg.srv
src/rover_camera/: CMakeLists.txt~
src/rover_camera/src/: rover_camera.cpp.txt~  rover_camera.h  rover_camera.h~
src/rover_controls/: CMakeLists.txt  SerialMonitor  package.xml
src/rover_controls/firmware/: CMakeLists.txt  test.cpp
src/rover_controls/include/: drivetrain_control.h
src/rover_controls/launch/: minirover.launch  rover_teleop.launch
src/rover_controls/msg/: ArduinoIMU.msg  Capacity.msg  Excavation.msg
src/rover_controls/romeo/: CMakeLists.txt  romeo.cpp  romeo_controls.h  romeo_encoders.h  (+1 more)
src/rover_description/: CMakeLists.txt  package.xml
src/rover_excavation/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  package.xml  package.xml~
src/rover_excavation/include/dig_control/: dig_control.h
src/rover_excavation/msg/: dig_progress.msg
src/rover_excavation/src/: dig_control.cpp  dig_control.cpp~  dig_control.h  dig_control.h~  excavaitionSerial.h~  excavationSerial.h  excavationSerial.h~  rover_excavation.cpp  rover_excavation.cpp~  rover_excavation_node.cpp~
src/rover_excavation/srv/: finish_dig.srv
src/rover_gazebo/: CMakeLists.txt  package.xml  setup.sh
src/rover_gazebo/plugins/ControlsPlugin/: CMakeLists.txt  ControlsPlugin.cc
src/rover_imu/: CMakeLists.txt  package.xml
src/rover_launch/: CMakeLists.txt  package.xml
src/rover_motor_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_navigation/: CMakeLists.txt  package.xml
src/rover_odometry/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/rover_odometry/include/Beacon/: Beacon.h  Beacon.h~
src/rover_odometry/include/Odometry/: Odometry.h  Odometry.h~
src/rover_odometry/src/: Beacon.cpp  Beacon.cpp~  Odometry.cpp  Odometry.cpp~  Timer.cpp~  Untitled Document 1.txt  beacon_old.txt  rover_beacons.cpp  rover_beacons.cpp~  rover_odometry.cpp~
src/rover_odometry/src/new_odom/: Beacon.cpp  Beacon.h  BeaconTest_basic.cpp  Odometry.cpp  Odometry.h  rover_odometry.cpp
src/rover_particle_filter/: CMakeLists.txt  package.xml
src/rover_path_finding/: CMakeLists.txt  package.xml
src/rover_pathfinding/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/rover_pathfinding/src/: PID_v1.cpp  coordinates.h  move_base.cpp  move_base.cpp~  move_base.h  move_base.h~  rover_pathfinding.cpp  rover_pathfinding.cpp~  rover_pathfinding.h~  rover_pathfinding_node.cpp  rover_pathfinding_node.cpp~
src/rover_pathfinding/srv/: global_goal.srv  global_goal.srv~
src/rover_setup_odom/: CMakeLists.txt  package.xml
src/rover_setup_tf/: CMakeLists.txt  package.xml
src/tutorial/: CMakeLists.txt  package.xml
src/urg_node_filtered/: CMakeLists.txt  package.xml
staging/: PointCloudCompare.cpp  pointCloudCompare.cpp
staging/minibase_teleop/: CMakeLists.txt  package.xml
staging/minirover_controls/: CMakeLists.txt  package.xml
staging/object_avoidance/: CMakeLists.txt  README.md  obstacle.cpp  obstacle.h  obstacleAvoid.cpp  obstacle_node.cpp  pc_background_subtract.cpp  pc_background_subtract.h  segmentation.cpp  segmentation.h
staging/rover_camera/: CMakeLists.txt  package.xml  package.xml~
staging/rover_camera/src/: rover_camera.cpp~  rover_camera_example.cpp
usage/: creating_packages_tutorial.md  editing_vagrantfile  raspberrypi_setup  usage_n.md
vagrant/: .catkinConfig.sh.swp  Vagrantfile  catkinConfig.sh  gazeboConfig.sh  rosConfig.sh  vagrantConfig.sh
(+110 files in other folders)
